// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorFormatEditor should render multiple colors 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Pattern (regular expression)"
            id="indexPatternManagement.color.patternLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Text color"
            id="indexPatternManagement.color.textColorLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Background color"
            id="indexPatternManagement.color.backgroundLabel"
          />,
          "render": [Function],
        },
        Object {
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Example"
            id="indexPatternManagement.color.exampleLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "Actions",
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
        Object {
          "background": "#ffffff",
          "index": 1,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add color"
      id="indexPatternManagement.color.addColorButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditor should render other type normally (range field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "range",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Range (min:max)"
            id="indexPatternManagement.color.rangeLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Text color"
            id="indexPatternManagement.color.textColorLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Background color"
            id="indexPatternManagement.color.backgroundLabel"
          />,
          "render": [Function],
        },
        Object {
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Example"
            id="indexPatternManagement.color.exampleLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "Actions",
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add color"
      id="indexPatternManagement.color.addColorButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditor should render string type normally (regex field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Pattern (regular expression)"
            id="indexPatternManagement.color.patternLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Text color"
            id="indexPatternManagement.color.textColorLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Background color"
            id="indexPatternManagement.color.backgroundLabel"
          />,
          "render": [Function],
        },
        Object {
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Example"
            id="indexPatternManagement.color.exampleLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "Actions",
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add color"
      id="indexPatternManagement.color.addColorButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;
